--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,15 +32,15 @@
     
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="/">Navbar</a>
+      <a class="navbar-brand" href="/">Classical Music</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="/">Home</span></a>
-          <a class="nav-item nav-link" href="/learn">Features</a>
-          <a class="nav-item nav-link" href="/quiz">Pricing</a>
+          <a class="nav-item nav-link" href="/learn">Learn</a>
+          <a class="nav-item nav-link" href="/quiz">Quiz</a>
         </div>
       </div>
     </nav>
