--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,36 @@
 
 {% block content %}
 
-<!-- TO-DO -->
-<h1>TO-DO: Home</h1>
+<div class="text-center my-5">
+    <h1><strong>Classical Music Through the Eras</strong></h1>
+</div>
+
+<div class="row justify-content-center">
+    <!-- Learn -->
+    <div class="col-md-4">
+        <a href="{{ url_for('learn') }}" class="text-decoration-none">
+            <div class="p-4 text-white text-start" style="background-color: #79a8d8; border-radius: 8px; cursor: pointer;">
+              <h4 class="text-center"><strong>LEARN</strong></h4>
+              <ul class="mt-3">
+                <li><em>Discover</em> the eras of music, like Renaissance and Romanticism</li>
+                <li><em>Analyze</em> different stylistic patterns</li>
+                <li><em>Listen</em> to different masterpieces within each genre</li>
+              </ul>
+            </div>
+          </a>
+    </div>
+  
+    <!-- Quiz -->
+    <div class="col-md-4">
+        <a href="{{ url_for('quiz') }}" class="text-decoration-none">
+            <div class="p-4 text-white text-start" style="background-color: #79a8d8; border-radius: 8px; cursor: pointer;">
+              <h4 class="text-center"><strong>QUIZ</strong></h4>
+              <ul class="mt-3">
+                <li><em>Test</em> your pattern recognition by listening to pieces you don’t know</li>
+                <li><em>Explore</em> different styles of music within the same era</li>
+              </ul>
+            </div>
+          </a>
+</div>
 
 {% endblock %}
