learn backend v1 complete

--- a/templates/home.html
+++ b/templates/home.html
@@ -23,7 +23,7 @@
   
     <!-- Quiz -->
     <div class="col-md-4">
-        <a href="{{ url_for('quiz') }}" class="text-decoration-none">
+        <a href="{{ url_for('quiz', quiz_num=1) }}" class="text-decoration-none">
             <div class="p-4 text-white text-start" style="background-color: #79a8d8; border-radius: 8px; cursor: pointer;">
               <h4 class="text-center"><strong>QUIZ</strong></h4>
               <ul class="mt-3">
