--- a/templates/quiz_results.html
+++ b/templates/quiz_results.html
@@ -9,6 +9,7 @@
             Great job completing the quiz!
         </p>
         <a href="{{ url_for('retryQuiz') }}" class="btn btn-primary mt-4">Retry Quiz</a>
+        <a href="{{ url_for('review_answers') }}" class="btn btn-primary mt-4">Review Answers</a>
     {% endif %}
 </div>
 {% endblock %}
