--- a/static/main.css
+++ b/static/main.css
@@ -1,3 +1,5 @@
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
+
 #timestamp-text {
     margin-top: 20px;
     font-size: 18px;
