--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,6 +21,8 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+
+
     <!-- Main CSS linking -->
     <link rel="stylesheet" href="{{url_for('static', filename='main.css')}}">
 
@@ -48,6 +50,9 @@
         {% endblock %}
     </div>
 
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+
+    
   </body>
 </html>
 
