--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,19 +31,29 @@
   <body>
     
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="/">Classical Music</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link" href="/">Home</span></a>
-          <a class="nav-item nav-link" href="/learn">Learn</a>
-          <a class="nav-item nav-link" href="/quiz/1">Quiz</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm mb-3">
+      <div class="container-fluid">
+        <a class="navbar-brand fw-bold" href="/">Classical Music</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+    
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link {% if request.path.startswith('/learn') %}active{% endif %}" href="/learn">Learn</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link {% if request.path.startswith('/quiz') %}active{% endif %}" href="/quiz/1">Quiz</a>
+            </li>
+          </ul>
         </div>
       </div>
-    </nav>
+    </nav>    
 
     <div class="container">   
         {% block content %}
